Pull artifacts from remote Maven repo

--- a/sigdep3/pom.xml
+++ b/sigdep3/pom.xml
@@ -108,6 +108,11 @@
 
   <repositories>
     <repository>
+			<id>uwdigi-repo-central</id>
+      <name>DIGI Public Repository</name>
+      <url>https://packages.uwdigi.org/artifactory/public</url>
+		</repository>
+    <repository>
       <id>openmrs-repo</id>
       <name>OpenMRS Nexus Repository</name>
       <url>https://mavenrepo.openmrs.org/public</url>
