--- a/gateway/default.conf.template
+++ b/gateway/default.conf.template
@@ -4,6 +4,26 @@ map $request_uri $csp_header {
   "~^/openmrs/owa" "default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; base-uri 'self'; font-src 'self' data:; img-src 'self' data:; frame-ancestors 'self';";
 }
 
+map $http_x_forwarded_proto $forwarded_proto {
+  "~.*" $http_x_forwarded_proto;
+  default    $scheme;
+}
+
+map $http_x_real_ip $forwarded_ip {
+  "~.*"  $http_x_real_ip;
+  default $remote_addr;
+}
+
+map $forwarded_proto $var_proxy_cookie_flags {
+  https   "JSESSIONID secure samesite=strict";
+  default "off";
+}
+
+map $request_uri $js_content_type {
+    ~\.js$       "application/javascript";
+    default      $sent_http_content_type;
+}
+
 upstream sigdep3-frontend {
   # always assume the frontend will be available
   server sigdep3-frontend max_fails=0;
@@ -75,5 +95,8 @@ server {
 
   location /openmrs {
     proxy_pass http://sigdep3-backend;
+    proxy_pass_header Content-Type;
+    
+    add_header Content-Type $js_content_type;
   }
 }
