--- a/sigdep3/Dockerfile
+++ b/sigdep3/Dockerfile
@@ -14,15 +14,13 @@ COPY distro ./distro/
 # Build the distro
 RUN --mount=type=secret,id=m2settings,target=/root/.m2/settings.xml mvn $MVN_ARGS_SETTINGS $MVN_ARGS
 
-#RUN cp /openmrs_distro/distro/target/sdk-distro/web/openmrs.war /openmrs/distribution/openmrs_core/
+RUN cp /openmrs_distro/distro/target/sdk-distro/web/openmrs.war /openmrs/distribution/openmrs_core/
 
 RUN cp /openmrs_distro/distro/target/sdk-distro/web/openmrs-distro.properties /openmrs/distribution/
 RUN cp -R /openmrs_distro/distro/target/sdk-distro/web/owa /openmrs/distribution/openmrs_owas
 
 # Since our internal maven repo isn't ready, let's use our locally managed omods as a pov
-# RUN cp -R /openmrs_distro/distro/target/sdk-distro/web/modules /openmrs/distribution/openmrs_modules
-RUN cp -R ./distro/binaries/openmrs_modules /openmrs/distribution/openmrs_modules 
-RUN cp -R ./distro/binaries/openmrs.war /openmrs/distribution/openmrs_core/
+RUN cp -R /openmrs_distro/distro/target/sdk-distro/web/modules /openmrs/distribution/openmrs_modules
 
 RUN cp -R ./distro/configuration /openmrs/distribution/openmrs_config/
 
