--- a/sigdep3/distro/distro.properties
+++ b/sigdep3/distro/distro.properties
@@ -5,35 +5,25 @@ omod.initializer=${initializer.version}
 omod.fhir2=${fhir2.version}
 omod.webservices.rest=${webservices.rest.version}
 omod.idgen=${idgen.version}
-omod.legacyui=${legacyui.version}
+omod.sigdep-legacyui=${sigdep-legacyui.version}
 omod.addresshierarchy=${addresshierarchy.version}
 omod.metadatamapping=${metadatamapping.version}
 omod.metadatasharing=${metadatasharing.version}
 omod.openconceptlab=${openconceptlab.version}
-omod.owa=${owa.version}
-omod.referencedemodata=${referencedemodata.version}
-omod.attachments=${attachments.version}
-omod.queue=${queue.version}
-omod.appointments=${appointments.version}
-omod.appointments.groupId=org.bahmni.module
-omod.teleconsultation=${teleconsultation.version}
-omod.teleconsultation.groupId=org.bahmni.module
-omod.cohort=${cohort.version}
 omod.reporting=${reporting.version}
 omod.reportingrest=${reportingrest.version}
 omod.calculation=${calculation.version}
 omod.htmlwidgets=${htmlwidgets.version}
 omod.serialization.xstream=${serialization-xstream.version}
 omod.serialization.xstream.type=omod
-omod.ordertemplates=${ordertemplates.version}
-omod.patientflags=${patientflags.version}
-omod.o3forms=${o3forms.version}
+mod.o3forms=${o3forms.version}
 
-# Sigdep modules
-# omod.biologicalorder=${biologicalorder.version}
-# omod.clientregistry=${clientregistry.version}
-# omod.event=${event.version}
-# omod.hivscreening=${hivscreening.version}
-# omod.htmlformentry=${htmlformentry.version}
-# omod.labonfhir=${labonfhir.version}
-# omod.ptme=${ptme.version}
+
+
+
+
+
+
+
+
+
