--- a/sigdep3/distro/pom.xml
+++ b/sigdep3/distro/pom.xml
@@ -13,57 +13,89 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
     <distro.baseDir>${project.build.directory}/${project.artifactId}</distro.baseDir>
     <distro.openmrsConfigDir>${distro.baseDir}/openmrs_config</distro.openmrsConfigDir>
     <distro.openmrsCoreDir>${distro.baseDir}/openmrs_core</distro.openmrsCoreDir>
     <distro.openmrsModulesDir>${distro.baseDir}/openmrs_modules</distro.openmrsModulesDir>
     <distro.spaDir>${distro.baseDir}/spa</distro.spaDir>
     <distro.spaConfigDir>${distro.baseDir}/spa_config</distro.spaConfigDir>
+    <openmrs.version>2.3.6</openmrs.version>
 
-    <!-- track module versions
-         we do so here so that we can utilise Maven to track updates, etc. -->
+    <addresshierarchy.version>2.16.0</addresshierarchy.version>
+    <biologicalorder.version>1.0.1</biologicalorder.version>
+    <calculation.version>1.2.1</calculation.version>
+    <clientregistry.version>1.1.8-SNAPSHOT</clientregistry.version>
+    <event.version>2.10.0</event.version>
     <fhir2.version>1.10.0</fhir2.version>
-    <openmrs.version>2.3.3</openmrs.version>
+    <hivscreening.version>1.0.0</hivscreening.version>
+    <htmlformentry.version>4.0.0</htmlformentry.version>
+    <htmlwidgets.version>1.10.0</htmlwidgets.version>
+    <idgen.version>4.6.0</idgen.version>
     <initializer.version>2.6.0</initializer.version>
-    <webservices.rest.version>2.41.0</webservices.rest.version>
-    <addresshierarchy.version>2.15.2</addresshierarchy.version>
-    <idgen.version>4.10.0</idgen.version>
-    <legacyui.version>1.16.0-SNAPSHOT</legacyui.version>
+    <labonfhir.version>1.4.0-SNAPSHOT</labonfhir.version>
+    <sigdep-legacyui.version>1.15.3</sigdep-legacyui.version>
     <metadatamapping.version>1.6.0</metadatamapping.version>
     <metadatasharing.version>1.9.0</metadatasharing.version>
-    <openconceptlab.version>2.1.0</openconceptlab.version>
-    <!-- this is request for the OCL UI -->
-    <owa.version>1.14.0</owa.version>
-    <attachments.version>3.0.0</attachments.version>
-    <referencedemodata.version>2.3.1</referencedemodata.version>
-    <queue.version>1.0.0-alpha.2</queue.version>
-    <appointments.version>2.0.0-SNAPSHOT</appointments.version>
-    <teleconsultation.version>2.0.0-SNAPSHOT</teleconsultation.version>
-    <cohort.version>3.5.0</cohort.version>
-    <reporting.version>1.25.0</reporting.version>
-    <reportingrest.version>1.14.0</reportingrest.version>
-    <!-- the next three are required for reporting -->
-    <calculation.version>1.3.0</calculation.version>
-    <htmlwidgets.version>1.11.0</htmlwidgets.version>
-    <serialization-xstream.version>0.2.16</serialization-xstream.version>
-    <ordertemplates.version>1.0.2</ordertemplates.version>
-    <patientflags.version>3.0.5</patientflags.version>
-    <o3forms.version>2.1.0</o3forms.version>
-
-    <!-- Sigdep module -->
-    <!-- 
-      <biologicalorder.version>1.0.0</biologicalorder.version>
-      <clientregistry.version>1.1.6</clientregistry.version>
-      <event.version>2.10.0</event.version>
-      <hivscreening.version>2.0</hivscreening.version>
-      <htmlformentry.version>4.0.0</htmlformentry.version>
-      <labonfhir.version>1.3.1</labonfhir.version>
-      <ptme.version>3.0</ptme.version> 
-    -->
+    <openconceptlab.version>1.2.9</openconceptlab.version>
+    <o3forms.version>2.2.0-SNAPSHOT</o3forms.version>
+    <ptme.version>1.1.1</ptme.version>
+    <reporting.version>1.21.0</reporting.version>
+    <reportingrest.version>1.13.0</reportingrest.version>
+    <serialization-xstream.version>0.2.14</serialization-xstream.version>
+    <supply.version>1.0.2</supply.version>
+    <webservices.rest.version>2.41.0</webservices.rest.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>supply-omod</artifactId>
+      <version>${supply.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>biologicalorder-omod</artifactId>
+      <version>${biologicalorder.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>clientregistry-omod</artifactId>
+      <version>${clientregistry.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>ptme-omod</artifactId>
+      <version>${ptme.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>labonfhir-omod</artifactId>
+      <version>${labonfhir.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>hivscreening-omod</artifactId>
+      <version>${hivscreening.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs</groupId>
+      <artifactId>event-omod</artifactId>
+      <version>${event.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>htmlformentry-omod</artifactId>
+      <version>${htmlformentry.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.openmrs.web</groupId>
       <artifactId>openmrs-webapp</artifactId>
@@ -99,8 +131,8 @@
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
-      <artifactId>legacyui-omod</artifactId>
-      <version>${legacyui.version}</version>
+      <artifactId>sigdep-legacyui-omod</artifactId>
+      <version>${sigdep-legacyui.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -125,48 +157,6 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>openconceptlab-omod</artifactId>
       <version>${openconceptlab.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>owa-omod</artifactId>
-      <version>${owa.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>attachments-omod</artifactId>
-      <version>${attachments.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>referencedemodata-omod</artifactId>
-      <version>${referencedemodata.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>queue-omod</artifactId>
-      <version>${queue.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.bahmni.module</groupId>
-      <artifactId>appointments-omod</artifactId>
-      <version>${appointments.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.bahmni.module</groupId>
-      <artifactId>teleconsultation-omod</artifactId>
-      <version>${teleconsultation.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>cohort-omod</artifactId>
-      <version>${cohort.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -197,12 +187,6 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>serialization.xstream-api</artifactId>
       <version>${serialization-xstream.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>patientflags-omod</artifactId>
-      <version>${patientflags.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
