Add Lab concepts

--- a/sigdep3/distro/pom.xml
+++ b/sigdep3/distro/pom.xml
@@ -25,7 +25,7 @@
     <biologicalorder.version>1.0.1</biologicalorder.version>
     <calculation.version>1.2.1</calculation.version>
     <clientregistry.version>1.1.8-SNAPSHOT</clientregistry.version>
-    <event.version>2.10.0</event.version>
+    <event.version>2.9.0</event.version>
     <fhir2.version>1.10.0</fhir2.version>
     <hivscreening.version>1.0.0</hivscreening.version>
     <htmlformentry.version>4.0.0</htmlformentry.version>
@@ -33,7 +33,7 @@
     <idgen.version>4.6.0</idgen.version>
     <initializer.version>2.6.0</initializer.version>
     <labonfhir.version>1.4.0-SNAPSHOT</labonfhir.version>
-    <sigdep-legacyui.version>1.15.3</sigdep-legacyui.version>
+    <legacyui.version>1.15.4-sigdep-SNAPSHOT</legacyui.version>
     <metadatamapping.version>1.6.0</metadatamapping.version>
     <metadatasharing.version>1.9.0</metadatasharing.version>
     <openconceptlab.version>1.2.9</openconceptlab.version>
@@ -131,8 +131,8 @@
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
-      <artifactId>sigdep-legacyui-omod</artifactId>
-      <version>${sigdep-legacyui.version}</version>
+      <artifactId>legacyui-omod</artifactId>
+      <version>${legacyui.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
