--- a/sigdep3/distro/distro.properties
+++ b/sigdep3/distro/distro.properties
@@ -5,7 +5,7 @@ omod.initializer=${initializer.version}
 omod.fhir2=${fhir2.version}
 omod.webservices.rest=${webservices.rest.version}
 omod.idgen=${idgen.version}
-omod.sigdep-legacyui=${sigdep-legacyui.version}
+omod.legacyui=${legacyui.version}
 omod.addresshierarchy=${addresshierarchy.version}
 omod.metadatamapping=${metadatamapping.version}
 omod.metadatasharing=${metadatasharing.version}
@@ -16,14 +16,13 @@ omod.calculation=${calculation.version}
 omod.htmlwidgets=${htmlwidgets.version}
 omod.serialization.xstream=${serialization-xstream.version}
 omod.serialization.xstream.type=omod
-mod.o3forms=${o3forms.version}
-
-
-
-
-
-
-
-
-
-
+omod.o3forms=${o3forms.version}
+omod.labonfhir=${labonfhir.version}
+omod.supply=${supply.version}
+omod.ptme=${ptme.version}
+omod.event=${event.version}
+omod.biologicalorder=${biologicalorder.version}
+omod.clientregistry=${clientregistry.version}
+omod.hivscreening=${hivscreening.version}
+omod.htmlformentry=${htmlformentry.version}
+omod.htmlwidgets=${htmlwidgets.version}
