Update compose files

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 TAG=nightly
 HOST_URL=dev.cihis.org
 COMPOSE_PROJECT_NAME=sigdep3
+
+CLIENTREGISTRY_SERVERURL=http://openhim-core:5001/CR/fhir
+CLIENTREGISTRY_USERNAME=sigdep3
+CLIENTREGISTRY_PASSWORD=sigdep3
+CLIENTREGISTRY_IDENTIFIERROOT=http://clientregistry.org/openmrs
