--- a/docker-compose-local-traefick.yml
+++ b/docker-compose-local-traefick.yml
@@ -3,6 +3,32 @@ version: '3.8'
 
 services:
 
+  ###
+  # Traefik Reverse Proxy
+  ###
+  traefik:
+    image: traefik:v2.8.3
+    restart: unless-stopped
+    container_name: traefik
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./configs/traefik/traefik.yml:/etc/traefik/traefik.yml
+      - ./configs/traefik/certs.yml:/etc/traefik/dynamic_conf/certs.yml
+      - certs:/etc/certs
+
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.docker.network=sigdep3_hie'
+      - 'traefik.http.routers.api.rule=Host(`test2.cihis.org`) && PathPrefix(`/api`) || PathPrefix(`/dashboard`)'
+      - 'traefik.http.routers.api.service=api@internal'
+      - 'traefik.http.routers.api.tls=true'
+      - 'traefik.http.routers.api.entrypoints=web-secure'
+    networks:
+      - hie
+    ports:
+      - 80:80
+      - 443:443
+
   sigdep3:
     image: partnersinhealth/openmrs-server:latest
     restart: unless-stopped
@@ -25,9 +51,18 @@ services:
       - ./configs/sigdep3/distribution:/openmrs/distribution
       # uncomment to persist the volumes on the Host file system
       #- .data/sigdep3:/openmrs/data
-    ports:
-      - "8080:8080"
-      - "1044:1044"
+    networks:
+      - hie
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.docker.network=sigdep3_hie'
+      - 'traefik.http.services.sigdep3.loadbalancer.server.port=8080'
+      - 'traefik.http.services.sigdep3.loadbalancer.server.scheme=http'
+      - 'traefik.http.routers.sigdep3.service=sigdep3'
+      - 'traefik.http.routers.sigdep3.tls=true'
+      - 'traefik.http.routers.sigdep3.entrypoints=web-secure'
+      - 'traefik.http.routers.sigdep3.rule=Host(`test2.cihis.org`) && PathPrefix(`/openmrs`)'
+
   sigdep-db:
     image: library/mysql:5.6
     restart: unless-stopped    
@@ -52,8 +87,8 @@ services:
     
       # uncomment to persist the volumes on the Host file system
       #- .db/sigdep3:/var/lib/mysql
-    ports:
-      - "3307:3306"
+    networks:
+      - hie
 
 #OpenHIM -IOL
   mongo:
@@ -61,7 +96,9 @@ services:
     ports:
       - "27017:27017"
     image: mongo:3.4
-
+    networks:
+      - hie
+      
   openhim-core:
     container_name: openhim-core
     image: jembi/openhim-core:v7.1.0
@@ -76,21 +113,36 @@ services:
       retries: 2
     volumes:
       - ./configs/openhim/healthcheck.js:/healthcheck.js
-    ports:
-      - "8085:8080"
-      - "5000:5000"
-      - "5001:5001"
-      - "5050:5050"
-      - "5051:5051"
-      - "5052:5052"
-      - "7788:7788" 
     depends_on:
       - mongo
+    networks:
+      - hie
+    labels:
+        - 'traefik.enable=true'
+        - 'traefik.docker.network=sigdep3_hie'
+        - 'traefik.http.services.openhim-api.loadbalancer.server.port=8080'
+        - 'traefik.http.services.openhim-api.loadbalancer.server.scheme=https'
+        - 'traefik.http.routers.openhim-api.service=openhim-api'
+        - 'traefik.http.routers.openhim-api.tls=true'
+        - 'traefik.http.routers.openhim-api.entrypoints=web-secure'
+        - 'traefik.http.routers.openhim-api.rule=Host(`test2.cihis.org`) && PathPrefix(`/openhimcomms`)'
+        - 'traefik.http.routers.openhim-api.middlewares=openhim-api'      
+        - 'traefik.http.middlewares.openhim-api.stripprefix.prefixes=/openhimcomms'
+        - 'traefik.http.middlewares.openhim-api.stripprefix.forceSlash=false'
+
+        - 'traefik.http.services.openhim-ssl.loadbalancer.server.port=5000'
+        - 'traefik.http.services.openhim-ssl.loadbalancer.server.scheme=https'
+        - 'traefik.http.routers.openhim-ssl.service=openhim-ssl'
+        - 'traefik.http.routers.openhim-ssl.tls=true'
+        - 'traefik.http.routers.openhim-ssl.entrypoints=web-secure'
+        - 'traefik.http.routers.openhim-ssl.rule=Host(`test2.cihis.org`) && PathPrefix(`/openhimcore`)'
+        - 'traefik.http.routers.openhim-ssl.middlewares=openhim-ssl'      
+        - 'traefik.http.middlewares.openhim-ssl.stripprefix.prefixes=/openhimcore'
+        - 'traefik.http.middlewares.openhim-ssl.stripprefix.forceSlash=false'
+
   openhim-console:
     container_name: openhim-console
     image: jembi/openhim-console:v1.15.0
-    ports:
-        - "9000:80"
     volumes:
       - ./configs/openhim-console/default-local.json:/usr/share/nginx/html/config/default.json
     healthcheck:
@@ -98,14 +150,26 @@ services:
       interval: 10s
       timeout: 60s
       retries: 3
+    labels:
+        - 'traefik.enable=true'
+        - 'traefik.docker.network=sigdep3_hie'
+        - 'traefik.http.services.openhim-console.loadbalancer.server.port=80'
+        - 'traefik.http.services.openhim-console.loadbalancer.server.scheme=http'
+        - 'traefik.http.routers.openhim-console.service=openhim-console'
+        - 'traefik.http.routers.openhim-console.tls=true'
+        - 'traefik.http.routers.openhim-console.entrypoints=web-secure'
+        - 'traefik.http.routers.openhim-console.rule=Host(`test2.cihis.org`)'
+    networks:
+      - hie
 
   # Loads Default OpenHIM Config
   openhim-config:
     container_name: openhim-config
     image: ghcr.io/i-tech-uw/openhim-config:v0.0.0
     volumes:
-      - ./configs/openhim/test-openhim-config.json:/app/test-openhim-config.json
- 
+      - ./configs/openhim/_config.json:/app/test-openhim-config.json
+    networks:
+      - hie
 
 ###
   # OpenCR - Client Registry
@@ -113,7 +177,7 @@ services:
   opencr:
     container_name: opencr
     hostname: opencr
-    image: intrahealth/opencr:c06849d
+    image: intrahealth/opencr:local
     restart: unless-stopped
     environment:
       - NODE_ENV=docker
@@ -123,8 +187,20 @@ services:
       - ./configs/opencr/mediator.json:/src/server/config/mediator.json
       - ./configs/opencr/decisionRules.json:/src/server/config/decisionRules.json
       - ./configs/opencr/PatientRelationship.json:/src/resources/Relationships/PatientRelationship.json
-    ports:
-      - 3000:3000
+    depends_on:
+      - opencr-fhir
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.docker.network=sigdep3_hie'
+      - 'traefik.http.routers.opencr.tls=true'
+      - 'traefik.http.routers.opencr.entrypoints=web-secure'
+      - 'traefik.http.services.opencr.loadbalancer.server.port=3000'
+      - 'traefik.http.routers.opencr.rule=Host(`test2.cihis.org`) && PathPrefix(`/crux`) || PathPrefix(`/ocrux`)' 
+      - 'traefik.http.services.opencr.loadbalancer.server.scheme=http'
+      - 'traefik.http.routers.opencr.service=opencr'
+    networks:
+      - hie
+
 
   opencr-fhir:
     image: hapiproject/hapi:v5.1.0
@@ -145,7 +221,8 @@ services:
     #   - ./configs/opencr/.env
     # environment:
     #   SPRING_CONFIG_LOCATION: 'file:///data/hapi/application.yaml'
-
+    networks:
+      - hie
   es:
     container_name: es
     hostname: es
@@ -162,119 +239,10 @@ services:
       - /usr/share/elasticsearch/data
     healthcheck:
       test: "curl --silent --fail http://es:9200/_cluster/health || exit 1"
+    networks:
+      - hie
 
-   # OpenELIS Setup
-   ####
-  # OpenELIS
-  ####
-  certs:
-    container_name: oe-certs
-    image: ghcr.io/i-tech-uw/certgen:main
-    restart: always
-    environment:
-      - KEYSTORE_PW="kspass"
-      - TRUSTSTORE_PW="tspass"
-    volumes:
-      - key_trust-store-volume:/etc/openelis-global
-      - keys-vol:/etc/ssl/private/
-      - certs-vol:/etc/ssl/certs/
-
-
-  database:
-    container_name: openelisglobal-database
-    image: postgres:9.5
-    ports:
-       - "15432:5432"
-    restart: always
-    env_file:
-      - ./configs/openelis/database/database.env
-    volumes:
-      # preserves the database between containers
-      - db-data:/var/lib/postgresql/data
-        # files here will run on install
-      - ./configs/openelis/database/dbInit:/docker-entrypoint-initdb.d
-
-    healthcheck:
-      test: ["CMD", "pg_isready", "-q", "-d", "clinlims", "-U", "clinlims"]
-      timeout: 45s
-      interval: 10s
-      retries: 10
-
-  oe.openelis.org:
-    container_name: openelisglobal-webapp
-    image: ghcr.io/i-tech-uw/openelis-global-2:2.7.1.1
-    depends_on:
-      - database
-    ports:
-       - "8443:8443"
-    restart: always
-    environment:
-      - TZ=Africa/Nairobi
-        # context.xml doesn't seem to be able to pick up environment variables directly, so we are passing them in as CATALINA_OPTS
-      - CATALINA_OPTS= -Ddatasource.url=jdbc:postgresql://database:5432/clinlims -Ddatasource.username=clinlims -Ddatasource.password=clinlims
-    volumes:
-      - key_trust-store-volume:/etc/openelis-global
-      # -  openelis-plugins-data:/var/lib/openelis-global/plugins
-      - ./configs/openelis/tomcat/oe_server.xml:/usr/local/tomcat/conf/server.xml
-    secrets:
-      - source: datasource.password
-      - source: common.properties
-
-
-  fhir.openelis.org:
-    container_name: external-fhir-api
-    image: hapiproject/hapi:v5.5.1
-    # ports:
-    # - "8081:8080"
-    restart: always
-    environment:
-      - hapi.fhir.auto_create_placeholder_reference_targets=true
-      - hapi.fhir.allow_placeholder_references=true
-      - hapi.fhir.allow_external_references=true
-  
-
-  # Hapi-FHIR -  SHR
-  shr-hapi-fhir:
-    container_name: shr-hapi-fhir
-    image: hapiproject/hapi:v5.5.1
-    # ports:
-    #   - "8081:8080"
-    restart: always
-    environment:
-      - hapi.fhir.auto_create_placeholder_reference_targets=true
-      - hapi.fhir.allow_placeholder_references=true
-      - hapi.fhir.allow_external_references=true
-
-  # Streaming Pipeline
-  streaming-pipeline: 
-    image: openmrsinfra/openmrs-fhir-analytics:plir-binlog
-    container_name: streaming-pipeline
-    healthcheck:
-      test: "exit 0"
-    depends_on:
-      sigdep-db:
-        condition: service_healthy  
-    volumes:
-      - ./configs/streaming-pipeline/config.json:/deployments/config.json
-      # data is the directory which you want to persist the generated parquet files
-      # - ./configs/streaming-pipeline/parquet:/tmp
-    environment:
-      - OPENMRS_URL=http://sigdep3:8080/openmrs
-      - OPENMRS_USERNAME=admin
-      - OPENMRS_PASSWORD=Dppeis@pnls_16
-      - SINK_URL=http://openhim-core:5001/fhir/
-      - SINK_USERNAME=dbezium
-      - SINK_PASSWORD=dbezium
-      - JDBC_FETCH_SIZE=10000
-      - JDBC_MAX_POOL_SIZE=50
-      - JDBC_INITIAL_POOL_SIZE=10
-      - JDBC_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
-      - JDBC_URL=jdbc:mysql://sigdep-db:3306/openmrs
-      # the 2 variable below should be same as volume mappings above
-      #- PARQUET_PATH=
-      - FHIR_DEBEZIUM_CONFIG_PATH=/deployments/config.json    
-  
-
+ 
 secrets:
   datasource.password:
     file: ./configs/openelis/properties/datasource.password
@@ -285,4 +253,8 @@ volumes:
   db-data:
   key_trust-store-volume:
   certs-vol:
+  certs:
   keys-vol:       
+
+networks:
+  hie:
