--- a/docker-compose-local-1.yml
+++ b/docker-compose-local-1.yml
@@ -70,7 +70,7 @@ services:
       timeout: 20s
       retries: 10
     depends_on:
-      openhim-console:
+      openhim-core:
         condition: service_healthy    
     ports:
       - "3307:3306"          
