Add remote and local pipeline configs

--- a/configs/local-new-streaming-pipeline/application.yaml
+++ b/configs/local-new-streaming-pipeline/application.yaml
@@ -23,8 +23,7 @@ fhirdata:
   # running on the same docker network.
   # fhirServerUrl: "http://172.17.0.1:8091/fhir"
   # fhirServerUrl: "http://hapi-server:8080/fhir"
-  # fhirServerUrl: "https://tap-demo.openelisci.org/openmrs/ws/fhir2/R4"
-  fhirServerUrl: "https://dev3.openmrs.org/openmrs/ws/fhir2/R4"
+  fhirServerUrl: "https://dev.cihis.org/openmrs/ws/fhir2/R4"
   fhirServerUserName: "admin"
   fhirServerPassword: "Admin123"
   #dbConfig: "config/hapi-postgres-config_local.json"
@@ -36,7 +35,7 @@ fhirdata:
   # There is no Questionnaire in our test FHIR server, but it is added to
   # prevent regression of https://github.com/google/fhir-data-pipes/issues/785.
   # TODO: add resource table creation to e2e tests.
-  resourceList: "Patient,Encounter,Observation,Condition,Practitioner,Location,MedicationRequest"
+  #resourceList: "Patient,Encounter,Observation,Condition,Practitioner,Location,MedicationRequest"
   #pipeline will depend on cores if -1
   numThreads: 1
   autoGenerateFlinkConfiguration: true
@@ -54,8 +53,8 @@ fhirdata:
   fhirSinkPath: "http://openhim-core:5001/fhir"
 
 
-  sinkUserName: "hapifhir"
-  sinkPassword: "hapifhir"
+  sinkUserName: "hapi"
+  sinkPassword: "hapi"
   recursiveDepth: 1
 
 # Enable spring boot actuator end points, use "*" to expose all endpoints, or a comma-separated
