Use latest opencr image

--- a/docker-compose-remote-traefick.yml
+++ b/docker-compose-remote-traefick.yml
@@ -116,7 +116,7 @@ services:
   opencr:
     container_name: opencr
     hostname: opencr
-    image: intrahealth/opencr:local
+    image: intrahealth/opencr:latest
     restart: unless-stopped
     environment:
       - NODE_ENV=docker
