Update fhir url

--- a/configs/local-streaming-pipeline/application.yaml
+++ b/configs/local-streaming-pipeline/application.yaml
@@ -23,7 +23,7 @@ fhirdata:
   # running on the same docker network.
   # fhirServerUrl: "http://172.17.0.1:8091/fhir"
   # fhirServerUrl: "http://hapi-server:8080/fhir"
-  fhirServerUrl: "https://test2.cihis.org/openmrs/ws/fhir2/R4"
+  fhirServerUrl: "http://sigdep3:8080/openmrs/ws/fhir2/R4"
   fhirServerUserName: "admin"
   fhirServerPassword: "Admin123"
   #dbConfig: "config/hapi-postgres-config_local.json"
