--- a/configs/local-streaming-pipeline/application.yaml
+++ b/configs/local-streaming-pipeline/application.yaml
@@ -35,7 +35,7 @@ fhirdata:
   # There is no Questionnaire in our test FHIR server, but it is added to
   # prevent regression of https://github.com/google/fhir-data-pipes/issues/785.
   # TODO: add resource table creation to e2e tests.
-  #resourceList: "Patient,Encounter,Observation,Condition,Practitioner,Location,MedicationRequest"
+  resourceList: "Patient,Encounter,Observation,Condition,Practitioner,Location,MedicationRequest"
   #pipeline will depend on cores if -1
   numThreads: 1
   autoGenerateFlinkConfiguration: true
