Update env vars

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ TAG=nightly
 HOST_URL=test2.cihis.org
 COMPOSE_PROJECT_NAME=sigdep3
 
-CLIENTREGISTRY_SERVERURL=https://test2.cihis.org/openhimcore/CR/fhir
+CLIENTREGISTRY_SERVERURL=http://openhim-core:5001/CR/fhir
 CLIENTREGISTRY_USERNAME=sigdep3
 CLIENTREGISTRY_PASSWORD=sigdep3
 CLIENTREGISTRY_IDENTIFIERROOT=http://clientregistry.org/openmrs
